trunk/Archive2/31/5ecd2c57afbeeb/output
main.cpp:3:15: error: use of undeclared identifier 'std'
        X() { std::cout << "1"; }
              ^
main.cpp:14:15: error: use of undeclared identifier 'std'
        X() { std::cout << "2"; }
              ^
2 errors generated.
